Add image fields to Content

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,12 @@ spring.datasource.password=${KEKEEK_DB_PASSWORD}
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
-# Hibernate ddl auto (create, create-drop, validate, update)
+# Hibernate ddl auto (create, create-drop, validate, update, none)
+# create: Create the schema and destroy previous data
+# create-drop: Create and then destroy the schema at the end of the session
+# none: Disable DDL handling
+# update: Update the schema if necessary
+# validate: Validate the schema, make no changes to the database
 spring.jpa.hibernate.ddl-auto = create
 
 # Don't fail on empty/private fields
