Add flyway migration files

--- a/flyway.template.properties
+++ b/flyway.template.properties
@@ -2,3 +2,5 @@ flyway.url=jdbc:postgresql://localhost:5432/kekeek
 flyway.user=postgres
 flyway.password=
 flyway.schemas=public
+flyway.locations=filesystem:./src/main/resources/db/migration
+
