--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=3080
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=jdbc:postgresql://localhost:5432/kekeek
+spring.datasource.url=${KEKEEK_DB_URL}
 spring.datasource.username=${KEKEEK_DB_USERNAME}
 spring.datasource.password=${KEKEEK_DB_PASSWORD}
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
