Add templates for config files that are not in the repository

--- a/flyway.template.properties
+++ b/flyway.template.properties
@@ -1,6 +1,5 @@
-flyway.url=jdbc:postgresql://localhost:5432/kekeek
-flyway.user=postgres
-flyway.password=
+flyway.url=jdbc:postgresql://DB_SERVER:DB_PORT/DB_NAME
+flyway.user=?
+flyway.password=?
 flyway.schemas=public
 flyway.locations=filesystem:./src/main/resources/db/migration
-
