--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - kekeek-postgres:/var/lib/postgresql/data
     env_file:
-      - ./.env
+      - ./postgres.env
     restart: unless-stopped
 
 volumes:
